# linux_sensors

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  syscall-sensors
include/sensor/: multithreaded_sensor.h
include/utils/: types.h
lib/include/utils/: types.h
